change some sections

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,11 +7,6 @@
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
-    />
-    <!-- Google Fonts -->
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
     <!-- Bootstrap core CSS -->
     <link
@@ -25,7 +20,7 @@
     />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/cv.min.css"/>
-    <title>Tin Zeljar - Portfolio</title>
+    <title>Mohammadreza Kakesh - Portfolio</title>
   </head>
   <body>
     <div class="container-fluid">
@@ -38,19 +33,19 @@
             <div class="text-center" id="sidebarHeader">
               <img
                 class="img-fluid rounded-circle mb-1"
-                src="/images/profile.png"
-                alt="image of author"
+                src="/images/"
+                alt="Mohammadreza Kakesh"
                 id="authorImage"
               />
-              <h3>Tin Zeljar</h3>
-              <h5>Full Stack Software Developer</h5>
-              <a href="/cv/Tin Zeljar portfolio.pdf" target="_blank">
+              <h3>Mohammadreza Kakesh</h3>
+              <h5>Full Stack Web Developer</h5>
+              <a href="https://linkedin.com/in/mohammadrezakakesh/" target="_blank">
                 <button
                 type="button"
                 class="btn btn-outline-yellow btn-lg"
                 style="border-radius: 30px; width: 13em"
               >
-                Get my CV
+                me @ Linkedin
               </button>
               </a>
             </div>
@@ -74,16 +69,16 @@
               class="text-center"
               id="iconContainer"
             >
-              <a href="https://github.com/Zheruel" target="_blank"><i class="mr-2 fab fa-github fa-3x"></i></a>
+              <a href="https://github.com/RedLion89" target="_blank"><i class="mr-2 fab fa-github fa-3x"></i></a>
               <a href="https://hr.linkedin.com/in/tin-zeljar" target="_blank"><i class="mr-2 fab fa-linkedin fa-3x"></i></a>
-              <a href="mailto:tinzeljar@gmail.com"><i class="fas fa-envelope fa-3x"></i></a>
+              <a href="mailto:mohammadrezaaa1397@gmail.com"><i class="fas fa-envelope fa-3x"></i></a>
             </div>
           </nav>
         </div>
 
         <div class="col" id="siteContent">
           <nav class="navbar navbar-dark bg-elegant" id="mobileNav">
-            <a class="navbar-brand">Tin Zeljar - mobile menu</a>
+            <a class="navbar-brand">Mohammadreza Kakesh - mobile menu</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" 
             data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -109,7 +104,7 @@
           <div class="d-flex flex-column justify-content-center container text-center" id="about">
             <h1>Tin Zeljar</h1>
             <div class="subheading mb-5">
-              <a class="yellow-text" href="mailto:tinzeljar@gmail.com">tinzeljar@gmail.com</a>
+              <a class="yellow-text" href="mailto:mohammadrezaaa1397@gmail.com@gmail.com">mohammadrezaaa1397@gmail.com</a>
               <br>
               <br>
               <div
@@ -117,7 +112,7 @@
               id="iconContainer"
               >
                 <a href="https://github.com/Zheruel" target="_blank"><i class="mr-2 fab fa-github fa-3x"></i></a>
-                <a href="https://hr.linkedin.com/in/tin-zeljar" target="_blank">
+                <a href="" target="_blank">
                   <i class="mr-2 fab fa-linkedin fa-3x"></i>
                 </a>
               </div>
@@ -126,7 +121,7 @@
                 class="btn btn-outline-yellow btn-lg">Download my CV</button></a>
             </div>
             <p class="lead">
-              Experienced software developer that has worked in many different front and backend technologies.
+              Experienced web developer that has worked in many different front and backend technologies.
               Ambitious and communicative. Always looking to take my skillset to the next level.
             </p>
 
@@ -143,10 +138,10 @@
                       <td>HTML/CSS + (Bootstrap)</td>
                     </tr>
                     <tr>
-                      <td>JavaScript + (JQuery, TypeScript)</td>
+                      <td>JavaScript + (JQuery)</td>
                     </tr>
                     <tr>
-                      <td>Angular</td>
+                      <td>React</td>
                     </tr>
                   </tbody>
                 </table>
@@ -156,21 +151,21 @@
                 <table class="table table-borderless white-text">
                   <thead>
                     <tr>
-                      <th scope="col" class="lead font-weight-bold yellow-text">Backend/Desktop</th>
+                      <th scope="col" class="lead font-weight-bold yellow-text">Backend</th>
                     </tr>
                   </thead>
                   <tbody>
                     <tr>
-                      <td>C + (C++)</td>
+                      <td>PHP + (Laravel)</td>
                     </tr>
                     <tr>
-                      <td>C# + (.NET Core)</td>
+                      <td>Mysql + (mongodb)</td>
                     </tr>
                     <tr>
-                      <td>Python + (Django REST, Flask)</td>
+                      <td>Wordpress</td>
                     </tr>
                     <tr>
-                      <td>SQL</td>
+                      <td>Woocommerce</td>
                     </tr>
                     <tr>
                       <td>PHP</td>
@@ -188,7 +183,7 @@
                   </thead>
                   <tbody>
                     <tr>
-                      <td>Git + (SourceTree, Git Flow)</td>
+                      <td>Git</td>
                     </tr>
                     <tr>
                       <td>Postman</td>
@@ -207,8 +202,8 @@
             <br>
             <div class="container my-5 py-3 z-depth-1" id="college1">
               <h3>Bachelor of Information Technology</h3>
-              <h5><a href="https://www.tvz.hr/" target="_blank" class="yellow-text">Zagreb University of Applied Sciences</a></h5>
-              <p class="grey-text">September 2017 - September 2020</p>
+              <h5><a href="https://www.tvz.hr/" target="_blank" class="yellow-text">Islamic Azad University</a></h5>
+              <p class="grey-text">September 2007 - September 2011</p>
               <p class="grey-text">
                 - Scored an A on every single CS oriented project including my bachelor's thesis.<br>
                 - Simultaneously worked as a full stack software developer and created many interesting side projects.
@@ -243,11 +238,11 @@
                       It uses JWT tokens for authentication. 
                     </p>
                     <p>Technologies:
-                      <a class="badge badge-default">Python</a> 
-                      <a class="badge badge-default">Django Rest Framework</a>
+                      <a class="badge badge-default">PHP / Mysql</a> 
+                      <a class="badge badge-default">Laravel Framework</a>
                       <a class="badge badge-default">HTML/CSS</a>
                       <a class="badge badge-default">Bootstrap</a>
-                      <a class="badge badge-default">Angular</a>
+                      <a class="badge badge-default">react</a>
                     </p>
                     <a class="btn btn-grey btn-md ml-0" 
                     href="https://github.com/Zheruel/CollegeApp" target="_blank">Code</a>
@@ -266,14 +261,14 @@
                       graded with an A by every single member of the commission. 
                     </p>
                     <p>Technologies:
-                      <a class="badge badge-default">C#</a> 
-                      <a class="badge badge-default">.NET Core</a>
+                      <a class="badge badge-default"></a> 
+                      <a class="badge badge-default"></a>
                       <a class="badge badge-default">HTML/CSS</a>
                       <a class="badge badge-default">Bootstrap</a>
                       <a class="badge badge-default">JavaScript</a>
                       <a class="badge badge-default">JQuery</a>
-                      <a class="badge badge-default">SQL</a>
-                      <a class="badge badge-default">Entity Framework</a>
+                      <a class="badge badge-default"></a>
+                      <a class="badge badge-default"></a>
                     </p>
                     <a class="btn btn-grey btn-md ml-0" 
                     href="https://github.com/Zheruel/Mr-Robot-Webshop" target="_blank">Code</a>
@@ -313,11 +308,11 @@
                       using HTTP requests. 
                     </p>
                     <p>Technologies: 
-                      <a class="badge badge-default">Python</a>
-                      <a class="badge badge-default">Requests</a>
-                      <a class="badge badge-default">BeautifulSoup</a> 
+                      <a class="badge badge-default"></a>
+                      <a class="badge badge-default"></a>
+                      <a class="badge badge-default"></a> 
                     </p>
-                    <a class="btn btn-grey btn-md ml-0" href="https://github.com/Zheruel/Python-hangman" 
+                    <a class="btn btn-grey btn-md ml-0" href="" 
                     target="_blank">Code</a>
                   </div>
                 </div>
@@ -335,13 +330,13 @@
                       This was my final project for the Object Oriented Programming II class in which it scored an A.
                     </p>
                     <p>Technologies: 
-                      <a class="badge badge-default">C#</a>
-                      <a class="badge badge-default">HTTP</a>
-                      <a class="badge badge-default">Windows Forms</a>
-                      <a class="badge badge-default">HTML Agility Scraper</a> 
-                      <a class="badge badge-default">XML</a> 
+                      <a class="badge badge-default"></a>
+                      <a class="badge badge-default"></a>
+                      <a class="badge badge-default"></a>
+                      <a class="badge badge-default"></a> 
+                      <a class="badge badge-default"></a> 
                     </p>
-                    <a class="btn btn-grey btn-md ml-0" href="https://github.com/Zheruel/Menza-scraper" 
+                    <a class="btn btn-grey btn-md ml-0" href="" 
                     target="_blank">Code</a>
                   </div>
                 </div>
