--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Font Awesome -->
     <link
       rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+      href="https://use.fontawesome.com/releases/v5.8.0/css/all.css"
     />
     <!-- Bootstrap core CSS -->
     <link
@@ -19,7 +19,7 @@
       rel="stylesheet"
     />
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/cv.min.css"/>
+    <link rel="stylesheet" href="css/cv.css"/>
     <title>Mohammadreza Kakesh - Portfolio</title>
   </head>
   <body>
@@ -38,21 +38,21 @@
                 id="authorImage"
               />
               <h3>Mohammadreza Kakesh</h3>
-              <h5>Full Stack Web Developer</h5>
+              <h5>Web Developer</h5>
               <a href="https://linkedin.com/in/mohammadrezakakesh/" target="_blank">
                 <button
                 type="button"
                 class="btn btn-outline-yellow btn-lg"
                 style="border-radius: 30px; width: 13em"
               >
-                me @ Linkedin
+                Download CV
               </button>
               </a>
             </div>
 
             <ul class="list-group text-center" id="navList">
               <li class="py-2">
-                <a href="#about" class="text-decoration-none" id="aboutItem">ABOUT</a>
+                <a href="#about" class="text-decoration-none" id="aboutItem">ABOUT ME</a>
               </li>
               <li class="py-2">
                 <a href="#education" class="text-decoration-none" id="educationItem">EDUCATION</a>
@@ -70,7 +70,7 @@
               id="iconContainer"
             >
               <a href="https://github.com/RedLion89" target="_blank"><i class="mr-2 fab fa-github fa-3x"></i></a>
-              <a href="https://hr.linkedin.com/in/tin-zeljar" target="_blank"><i class="mr-2 fab fa-linkedin fa-3x"></i></a>
+              <a href="" target="_blank"><i class="mr-2 fab fa-linkedin fa-3x"></i></a>
               <a href="mailto:mohammadrezaaa1397@gmail.com"><i class="fas fa-envelope fa-3x"></i></a>
             </div>
           </nav>
@@ -86,7 +86,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item active">
-                  <a class="nav-link" href="#about">About</a>
+                  <a class="nav-link" href="#about">About me</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#education">Education</a>
@@ -102,26 +102,31 @@
           </nav>
           
           <div class="d-flex flex-column justify-content-center container text-center" id="about">
-            <h1>Tin Zeljar</h1>
+            <h1 style="padding-top: 30px">MohammadReza Kakesh</h1>
             <div class="subheading mb-5">
-              <a class="yellow-text" href="mailto:mohammadrezaaa1397@gmail.com@gmail.com">mohammadrezaaa1397@gmail.com</a>
+              <a class="yellow-text" href="mailto:mohammadrezaaa1397@gmail.com@gmail.com">Full Stack Web Developer</a>
               <br>
               <br>
               <div
               class="text-center"
               id="iconContainer"
               >
-                <a href="https://github.com/Zheruel" target="_blank"><i class="mr-2 fab fa-github fa-3x"></i></a>
+                <a href="" target="_blank"><i class="mr-2 fab fa-github fa-3x"></i></a>
                 <a href="" target="_blank">
                   <i class="mr-2 fab fa-linkedin fa-3x"></i>
                 </a>
+                <a href="http://twitter.com/prime-store" target="_blank">
+                  <i class="mr-2 fab fa-twitter fa-3x"></i>
+                </a>
               </div>
             <br>
-              <a href="/cv/Tin Zeljar portfolio.pdf" target="_blank"><button type="button" 
-                class="btn btn-outline-yellow btn-lg">Download my CV</button></a>
+              <a href="" target="_blank"><button type="button" 
+                class="btn btn-outline-yellow btn-lg">Download My CV : English</button></a>
+                <a href="" target="_blank"><button type="button" 
+                class="btn btn-outline-yellow btn-lg">Download My CV : Persian</button></a>
             </div>
             <p class="lead">
-              Experienced web developer that has worked in many different front and backend technologies.
+              Experienced web developer that has worked in different front and backend technologies.
               Ambitious and communicative. Always looking to take my skillset to the next level.
             </p>
 
@@ -161,15 +166,6 @@
                     <tr>
                       <td>Mysql + (mongodb)</td>
                     </tr>
-                    <tr>
-                      <td>Wordpress</td>
-                    </tr>
-                    <tr>
-                      <td>Woocommerce</td>
-                    </tr>
-                    <tr>
-                      <td>PHP</td>
-                    </tr>
                   </tbody>
                 </table>
               </div>
@@ -183,13 +179,13 @@
                   </thead>
                   <tbody>
                     <tr>
+                      <td>Wordpress</td>
+                    </tr>
+                    <tr>
+                      <td>Woocommerce</td>
+                    </tr>
+                    <tr>
                       <td>Git</td>
-                    </tr>
-                    <tr>
-                      <td>Postman</td>
-                    </tr>
-                    <tr>
-                      <td>Agile + (SCRUM)</td>
                     </tr>
                   </tbody>
                 </table>
@@ -232,20 +228,18 @@
               <section class="text-center text-lg-left">
                 <div class="row mb-1">
                   <div class="container col">       
-                    <h3 class="font-weight-bold">College Management App</h3>
+                    <h3 class="font-weight-bold">School Management App</h3>
                     <p class="grey-text">Web application used to manage college admissions. Students can 
                       apply to colleges and administrators can approve or deny their applications. 
                       It uses JWT tokens for authentication. 
                     </p>
                     <p>Technologies:
-                      <a class="badge badge-default">PHP / Mysql</a> 
-                      <a class="badge badge-default">Laravel Framework</a>
+                      <a class="badge badge-default">PHP / Mysql</a>
                       <a class="badge badge-default">HTML/CSS</a>
                       <a class="badge badge-default">Bootstrap</a>
-                      <a class="badge badge-default">react</a>
                     </p>
                     <a class="btn btn-grey btn-md ml-0" 
-                    href="https://github.com/Zheruel/CollegeApp" target="_blank">Code</a>
+                    href="" target="_blank">Live</a>
                   </div>
                 </div>
               </section>
@@ -255,23 +249,15 @@
               <section class="text-center text-lg-left">
                 <div class="row mb-1">
                   <div class="container col">       
-                    <h3 class="font-weight-bold">Mr Robot Webshop</h3>
-                    <p class="grey-text">Proof of concept for a PC parts webshop developed
-                      using modern technologies. It was created for my bachelor's thesis and got 
-                      graded with an A by every single member of the commission. 
-                    </p>
+                    <h3 class="font-weight-bold">Food Ordering App</h3>
+                    <p class="grey-text"></p>
                     <p>Technologies:
-                      <a class="badge badge-default"></a> 
-                      <a class="badge badge-default"></a>
-                      <a class="badge badge-default">HTML/CSS</a>
+                      <a class="badge badge-default">PHP</a> 
+                      <a class="badge badge-default">Mysql</a>
                       <a class="badge badge-default">Bootstrap</a>
-                      <a class="badge badge-default">JavaScript</a>
-                      <a class="badge badge-default">JQuery</a>
-                      <a class="badge badge-default"></a>
-                      <a class="badge badge-default"></a>
                     </p>
                     <a class="btn btn-grey btn-md ml-0" 
-                    href="https://github.com/Zheruel/Mr-Robot-Webshop" target="_blank">Code</a>
+                    href="" target="_blank">Live</a>
                   </div>
                 </div>
               </section>
@@ -281,10 +267,9 @@
               <section class="text-center text-lg-left">
                 <div class="row mb-1">
                   <div class="container col">       
-                    <h3 class="font-weight-bold">PHP News Website</h3>
-                    <p class="grey-text">News portal developed as my final project for the web application development class.
+                    <h3 class="font-weight-bold">Magazine App</h3>
+                    <p class="grey-text">Magazine portal developed as my final project for the web application development class.
                       It has many interesting features such as user authentication, 
-                      dynamically generated HTML pages, an administration panel and more!  
                     </p>
                     <p>Technologies: 
                       <a class="badge badge-default">PHP</a>
@@ -292,8 +277,8 @@
                       <a class="badge badge-default">Bootstrap</a> 
                       <a class="badge badge-default">SQL</a>
                     </p>
-                    <a class="btn btn-grey btn-md ml-0" href="https://github.com/Zheruel/PHP-News-Website" 
-                    target="_blank">Code</a>
+                    <a class="btn btn-grey btn-md ml-0" href="http://blog.prime-store.ir" 
+                    target="_blank">Live</a>
                   </div>
                 </div>
               </section>
@@ -303,17 +288,16 @@
               <section class="text-center text-lg-left">
                 <div class="row mb-1">
                   <div class="container col">       
-                    <h3 class="font-weight-bold">Python Web Scraper Hangman</h3>
+                    <h3 class="font-weight-bold">Wordpress Blog</h3>
                     <p class="grey-text">Python hangman game that grabs the most common english words from an online website
                       using HTTP requests. 
                     </p>
                     <p>Technologies: 
-                      <a class="badge badge-default"></a>
-                      <a class="badge badge-default"></a>
-                      <a class="badge badge-default"></a> 
+                      <a class="badge badge-default">Wordpress</a>
+                      <a class="badge badge-default">HTML / CSS</a>
                     </p>
                     <a class="btn btn-grey btn-md ml-0" href="" 
-                    target="_blank">Code</a>
+                    target="_blank">Live</a>
                   </div>
                 </div>
               </section>
@@ -323,21 +307,14 @@
               <section class="text-center text-lg-left">
                 <div class="row mb-1">
                   <div class="container col">       
-                    <h3 class="font-weight-bold">Menza Scraper</h3>
-                    <p class="grey-text">Desktop web scraping application. It scrapes
-                      <a href="https://www.srce.unizg.hr/">SRCE</a> and gets receipt data (restaurant visit times, what they ate, ect.) from any 
-                      targeted group of croatian students. The scraped data is saved into an XML document. 
-                      This was my final project for the Object Oriented Programming II class in which it scored an A.
-                    </p>
+                    <h3 class="font-weight-bold">Woocommerce Store</h3>
+                    <p class="grey-text"></p>
                     <p>Technologies: 
-                      <a class="badge badge-default"></a>
-                      <a class="badge badge-default"></a>
-                      <a class="badge badge-default"></a>
-                      <a class="badge badge-default"></a> 
-                      <a class="badge badge-default"></a> 
+                      <a class="badge badge-default">Wordpress</a>
+                      <a class="badge badge-default">Woocommerce</a>
                     </p>
-                    <a class="btn btn-grey btn-md ml-0" href="" 
-                    target="_blank">Code</a>
+                    <a class="btn btn-grey btn-md ml-0" href="http://prime-store.ir" 
+                    target="_blank">Live</a>
                   </div>
                 </div>
               </section>
@@ -351,12 +328,12 @@
   <!-- JQuery -->
   <script
     type="text/javascript"
-    src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+    src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"
   ></script>
   <!-- Bootstrap tooltips -->
   <script
     type="text/javascript"
-    src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"
+    src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.9.9/popper.min.js"
   ></script>
   <!-- Bootstrap core JavaScript -->
   <script
